1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* HumbugModelSwarm.m (simpleGenTest6:File:NumVars:Shift:): Constify
	File: argument. Reformat argument list.
	* HumbugModelSwarm.m (splitGenTest6:File:NumVars:Shift:): Likewise.
	* HumbugModelSwarm.m.6 (simpleGenTest6:File:NumVars:Shift:): Likewise.
	* HumbugModelSwarm.m.6 (splitGenTest6:File:NumVars:Shift:): Likewise.