@@ -1,3 +1,11 @@
+1998-02-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* HumbugModelSwarm.m, HumbugModelSwarm.m.6: Include objectbase.h
+	instead of swarmobject.h.
+	
+	* HumbugModelSwarm.h: Likewise.  Include from objectbase/ instead of
+	swarmobject/.
+
 1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* HumbugModelSwarm.m (simpleGenTest6:File:NumVars:Shift:): Constify
